<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/tan"
    android:gravity="center"
    android:orientation="horizontal">
<ImageView
    android:id="@+id/dialog_img"
    android:layout_width="0dp"
    android:layout_height="120dp"
    android:src="@mipmap/welcome"
    android:scaleType="fitXY"
    android:layout_weight="3"
    android:layout_marginLeft="10dp"

    android:layout_marginBottom="8dp"
    android:layout_marginRight="10dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_weight="6">
        <TextView
            android:id="@+id/fileName_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/itemtile2"/>

        <TextView
            android:id="@+id/year_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/dynasty"/>
        <TextView
            android:id="@+id/size_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/size"/>
        <TextView
            android:id="@+id/product_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/producer"/>
    </LinearLayout>
</LinearLayout>
