<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group
    android:id="@+id/group_one"
    android:checkableBehavior="none"
    >
    <item
        android:id="@+id/introduce_navigation_menu_item"
        android:icon="@mipmap/introducelibrary"
        android:title="@string/introduce" />
</group>
    <group
        android:id="@+id/group_two"
        android:checkableBehavior="none"
        >
    <item
        android:id="@+id/goods_navigation_menu_item"
        android:icon="@mipmap/menugoods"
        android:title="@string/sypriciate" />
    </group>
    <group
        android:id="@+id/group_three"
        android:checkableBehavior="none"
        >
    <item
        android:id="@+id/traffic_navigation_menu_item"
        android:icon="@mipmap/translate"
        android:title="@string/transport" />
</group>
    <group
        android:id="@+id/group_four"
        android:checkableBehavior="none"
        >
    <item
        android:id="@+id/ticket_navigation_menu_item"
        android:icon="@mipmap/menuticket"
        android:title="@string/ticketinfo" />
    </group>
<group android:id="@+id/five"
    android:checkableBehavior="none">
    <item
        android:title=""></item>
</group>

</menu>