<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/appreciateback"
    android:orientation="vertical">
<ImageView
    android:id="@+id/gridview_image"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:scaleType="fitXY"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:src="@mipmap/welcome"/>
    <TextView
        android:id="@+id/name_gridview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15sp"
        android:text="@string/itemtile"/>
    <TextView
        android:id="@+id/dynasty_gridview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:textSize="12sp"
        android:layout_marginLeft="15sp"
        android:text="@string/dynasty"/>
        <TextView
            android:id="@+id/paramters_gridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="12sp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15sp"
            android:text="@string/size"/>

        <TextView
            android:id="@+id/address_gridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginRight="15dp"
            android:textSize="12sp"
            android:layout_marginLeft="15sp"
            android:text="@string/producer"
            android:layout_marginBottom="10dp"/>
</LinearLayout>
