<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_firtpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/squre_fang"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context="fragment.BlankFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/bigtitle_fragmentblank"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/squre_tiao"
            android:gravity="left|center_vertical"
            android:paddingTop="5dp"
            android:text="@string/f1"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_Fragment_show"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:scaleType="fitXY"

            android:src="@mipmap/welcome" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="5">

            <TextView
                android:id="@+id/fileName_exist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/tile"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_exist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fileName_exist"
                android:layout_marginRight="50dp"
                android:layout_marginTop="6dp"
                android:text="@string/intro"
                android:textSize="12dp" />



            <ImageView
                android:id="@+id/swap"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:src="@mipmap/jiantou" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:text="@string/visit"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
